--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.5.0",
+    "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
@@ -16,9 +18,13 @@
     "js-cookie": "^3.0.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "v-money": "^0.8.1",
     "vue": "^3.0.0",
+    "vue-currency-input": "^2.4.0",
     "vue-router": "^4.0.12",
-    "vue-sweetalert2": "^5.0.2"
+    "vue-sweetalert2": "^5.0.2",
+    "vue-the-mask": "^0.11.1",
+    "vuejs-money": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
