--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
+    "mosha-vue-toastify": "^1.0.23",
+    "notiwind": "^1.2.5",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "v-money": "^0.8.1",
     "vue": "^3.0.0",
     "vue-currency-input": "^2.4.0",
+    "vue-notification": "^1.3.20",
     "vue-router": "^4.0.12",
     "vue-sweetalert2": "^5.0.2",
     "vue-the-mask": "^0.11.1",
